# sqlite-gui-analyzer

./: LICENSE  README.md  pyproject.toml  sqlite-gui-analyzer.spec  sqlite_gui_analyzer.py  version.txt
src/: app.py  constants.py  database.py  dialogs.py  utils.py  wal_parser.py  widgets.py
test_data/: wal_demo.db-shm  wal_demo.db-wal.bak
